--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.10.0",
-    "next": "16.1.0",
+    "bcryptjs": "^2.4.3",
+    "next": "^16.1.1",
     "pg": "^8.16.3",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
